--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Controllers\DownloadController.cs" />
     <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\TraffickingController.cs" />
     <Compile Include="Controllers\ValidationController.cs" />
     <Compile Include="DAL\Admin\REFERENCE.cs" />
@@ -223,6 +224,7 @@
     </Compile>
     <Compile Include="Models\FileType.cs" />
     <Compile Include="Models\FileWeb.cs" />
+    <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\Navigation\NavigationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -311,6 +313,7 @@
     <Content Include="Content\Images\Human Traffickking - WC.png" />
     <Content Include="Content\Images\img04.jpg" />
     <Content Include="Content\Images\Life is about finding people who are your kind of crazy! %285%29.png" />
+    <Content Include="Content\Images\Loginbackground.jpg" />
     <Content Include="Content\Images\pdf_icon.png" />
     <Content Include="Content\Images\people-train-public-transportation-hurry.jpg" />
     <Content Include="Content\Images\pexels-photo-106567.jpeg" />
@@ -1131,6 +1134,10 @@
     <Content Include="Views\CyberSecurity\Quiz.cshtml" />
     <Content Include="Views\Shared\_FileItems.cshtml" />
     <Content Include="Views\File\Show.cshtml" />
+    <Content Include="Views\trafficking\WarningSigns.cshtml" />
+    <Content Include="Views\Shared\_Login.cshtml" />
+    <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Login\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
