--- a/Praesidium/Praesidium/Praesidium.csproj
+++ b/Praesidium/Praesidium/Praesidium.csproj
@@ -287,6 +287,7 @@
     <Content Include="Content\Images\Alyssa.jpg" />
     <Content Include="Content\Images\back-to-school-1576789_960_720.jpg" />
     <Content Include="Content\Images\Blake.png" />
+    <Content Include="Content\Images\bulldog.png" />
     <Content Include="Content\Images\Caleb.png" />
     <Content Include="Content\Images\caution.jpg" />
     <Content Include="Content\Images\cs_cloud.png" />
